--- a/article.html
+++ b/article.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Purifier | Shahaf</title>
+    <title>Purifier | Latest News</title>
     <script src="https://kit.fontawesome.com/1ecfa3ea2d.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Lato&family=Staatliches&display=swap" rel="stylesheet">
@@ -25,6 +25,7 @@
             <ul>
                 <li><a href="index.html" >Home</a></li>
                 <li><a href="about.html">About</a></li>
+                
             </ul>
         </div>
     </nav>
